ecmascript/parser/tests/typescript-errors/tsc/async/es2017/functionDeclarations/asyncFunctionDeclaration10_es2017/input.ts.stderr
error: Expected an expression after this
 --> $DIR/tests/typescript-errors/tsc/async/es2017/functionDeclarations/asyncFunctionDeclaration10_es2017/input.ts:3:33
  |
3 | async function foo(a = await => await): Promise<void> {
  |                                 ^^^^^

